[gd_scene load_steps=43 format=3 uid="uid://rhx3niqdteki"]

[ext_resource type="Script" path="res://enemy.gd" id="1_gbrt2"]
[ext_resource type="Texture2D" uid="uid://f2tg4mbbpkok" path="res://Sprites/Light Bandit/LightBandit.png" id="2_rr3h4"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ngsne"]
size = Vector2(14, 43)

[sub_resource type="AtlasTexture" id="AtlasTexture_vtotm"]
atlas = ExtResource("2_rr3h4")
region = Rect2(0, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_mtqel"]
atlas = ExtResource("2_rr3h4")
region = Rect2(48, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_fi77y"]
atlas = ExtResource("2_rr3h4")
region = Rect2(96, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_1mkj7"]
atlas = ExtResource("2_rr3h4")
region = Rect2(144, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_ye4ep"]
atlas = ExtResource("2_rr3h4")
region = Rect2(192, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_ty02l"]
atlas = ExtResource("2_rr3h4")
region = Rect2(240, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_6mgx1"]
atlas = ExtResource("2_rr3h4")
region = Rect2(288, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_aoy5j"]
atlas = ExtResource("2_rr3h4")
region = Rect2(336, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_n0udo"]
atlas = ExtResource("2_rr3h4")
region = Rect2(0, 192, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_rj683"]
atlas = ExtResource("2_rr3h4")
region = Rect2(48, 192, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_n6nft"]
atlas = ExtResource("2_rr3h4")
region = Rect2(96, 192, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_3gq7s"]
atlas = ExtResource("2_rr3h4")
region = Rect2(144, 192, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_13y1m"]
atlas = ExtResource("2_rr3h4")
region = Rect2(192, 192, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_y2jcl"]
atlas = ExtResource("2_rr3h4")
region = Rect2(0, 192, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_jaryd"]
atlas = ExtResource("2_rr3h4")
region = Rect2(48, 192, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_27s0b"]
atlas = ExtResource("2_rr3h4")
region = Rect2(96, 192, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_lbm5u"]
atlas = ExtResource("2_rr3h4")
region = Rect2(0, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_qlovc"]
atlas = ExtResource("2_rr3h4")
region = Rect2(48, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_68g5m"]
atlas = ExtResource("2_rr3h4")
region = Rect2(96, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_aql5u"]
atlas = ExtResource("2_rr3h4")
region = Rect2(144, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_yf4oj"]
atlas = ExtResource("2_rr3h4")
region = Rect2(0, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_m0k60"]
atlas = ExtResource("2_rr3h4")
region = Rect2(48, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_16gtv"]
atlas = ExtResource("2_rr3h4")
region = Rect2(96, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_50eho"]
atlas = ExtResource("2_rr3h4")
region = Rect2(144, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_vd61f"]
atlas = ExtResource("2_rr3h4")
region = Rect2(192, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_rynf1"]
atlas = ExtResource("2_rr3h4")
region = Rect2(240, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_ki1pt"]
atlas = ExtResource("2_rr3h4")
region = Rect2(288, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_jxakj"]
atlas = ExtResource("2_rr3h4")
region = Rect2(336, 48, 48, 48)

[sub_resource type="SpriteFrames" id="SpriteFrames_pg1e5"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_vtotm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mtqel")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fi77y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1mkj7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ye4ep")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ty02l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6mgx1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_aoy5j")
}],
"loop": true,
"name": &"attack",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_n0udo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rj683")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n6nft")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3gq7s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_13y1m")
}],
"loop": true,
"name": &"death",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_y2jcl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jaryd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_27s0b")
}],
"loop": true,
"name": &"hurt",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_lbm5u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qlovc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_68g5m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_aql5u")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_yf4oj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m0k60")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_16gtv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_50eho")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vd61f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rynf1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ki1pt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jxakj")
}],
"loop": true,
"name": &"run",
"speed": 5.0
}]

[sub_resource type="Animation" id="Animation_0scf6"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"attack"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AttackArea/AttackCollisionShape:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_05a13"]
resource_name = "attack"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"attack"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 5, 6, 7]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AttackArea/AttackCollisionShape:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.1, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}

[sub_resource type="Animation" id="Animation_tuat0"]
resource_name = "death"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"death"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AttackArea/AttackCollisionShape:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_jke5d"]
resource_name = "hurt"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"hurt"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [0, 1, 2]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AttackArea/AttackCollisionShape:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_0kgad"]
resource_name = "idle"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"idle"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}

[sub_resource type="Animation" id="Animation_88ffv"]
resource_name = "run"
length = 0.8
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"run"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_sipbv"]
_data = {
"RESET": SubResource("Animation_0scf6"),
"attack": SubResource("Animation_05a13"),
"death": SubResource("Animation_tuat0"),
"hurt": SubResource("Animation_jke5d"),
"idle": SubResource("Animation_0kgad"),
"run": SubResource("Animation_88ffv")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_okjjr"]
size = Vector2(1070, 4)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_hpwi8"]
size = Vector2(44, 4)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_50r7e"]
size = Vector2(22, 20)

[node name="EnemyFast" type="CharacterBody2D"]
collision_layer = 2
collision_mask = 0
script = ExtResource("1_gbrt2")
speed = 200
health = 30
attack_power = 5
pushing_power = 200

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -21.5)
shape = SubResource("RectangleShape2D_ngsne")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -22)
scale = Vector2(-1, 1)
sprite_frames = SubResource("SpriteFrames_pg1e5")
animation = &"attack"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_sipbv")
}

[node name="PlayerDetectionArea" type="Area2D" parent="."]
collision_layer = 0

[node name="PlayerDetectionCollisionShape" type="CollisionShape2D" parent="PlayerDetectionArea"]
position = Vector2(0, -2)
shape = SubResource("RectangleShape2D_okjjr")

[node name="AttackDetectionArea" type="Area2D" parent="."]
collision_layer = 0

[node name="AttackDetectionCollisionShape" type="CollisionShape2D" parent="AttackDetectionArea"]
position = Vector2(0, -7)
shape = SubResource("RectangleShape2D_hpwi8")

[node name="AttackArea" type="Area2D" parent="."]
collision_layer = 0

[node name="AttackCollisionShape" type="CollisionShape2D" parent="AttackArea"]
position = Vector2(11, -20)
shape = SubResource("RectangleShape2D_50r7e")
disabled = true

[node name="Healthbar" type="ProgressBar" parent="."]
offset_left = -10.0
offset_right = 10.0
offset_bottom = 5.0
show_percentage = false

[node name="Label" type="Label" parent="."]
offset_left = -20.0
offset_top = -65.0
offset_right = 20.0
offset_bottom = -42.0

[node name="HurtTimer" type="Timer" parent="."]
wait_time = 0.3
one_shot = true

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
[connection signal="body_entered" from="PlayerDetectionArea" to="." method="_on_player_detection_area_body_entered"]
[connection signal="body_exited" from="PlayerDetectionArea" to="." method="_on_player_detection_area_body_exited"]
[connection signal="body_entered" from="AttackDetectionArea" to="." method="_on_attack_detection_area_body_entered"]
[connection signal="body_exited" from="AttackDetectionArea" to="." method="_on_attack_detection_area_body_exited"]
[connection signal="body_entered" from="AttackArea" to="." method="_on_attack_area_body_entered"]
[connection signal="body_exited" from="AttackArea" to="." method="_on_attack_area_body_exited"]
[connection signal="timeout" from="HurtTimer" to="." method="_on_hurt_timer_timeout"]
